--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/node": "^5.3.7",
     "bcryptjs": "^3.0.2",
     "date-fns": "^3.6.0",
     "emailjs-com": "^3.2.0",
