--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.344.0",
-    "next": "^15.4.5",
+    "next": "15.4.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
